@@ -7,7 +7,6 @@ import java.util.function.Consumer;
 
 import org.jetbrains.annotations.Nullable;
 
-import com.google.common.collect.Streams;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
@@ -16,7 +15,6 @@ import com.mojang.serialization.JsonOps;
 import net.minecraft.ChatFormatting;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
-import net.minecraft.core.Holder;
 import net.minecraft.core.Registry;
 import net.minecraft.core.dispenser.BlockSource;
 import net.minecraft.core.registries.BuiltInRegistries;
@@ -60,16 +58,17 @@ import snownee.lychee.RecipeTypes;
 import snownee.lychee.action.CustomAction;
 import snownee.lychee.compat.recipe_api.AlwaysTrueIngredient;
 import snownee.lychee.compat.recipe_api.VisualOnlyComponentsIngredient;
-import snownee.lychee.compat.rv.IngredientType;
+import snownee.lychee.compat.recipeviewer.IngredientType;
 import snownee.lychee.contextual.CustomCondition;
 import snownee.lychee.recipes.BlockClickingRecipe;
 import snownee.lychee.recipes.BlockInteractingRecipe;
 import snownee.lychee.util.action.PostActionTypes;
 import snownee.lychee.util.context.LycheeContextKey;
-import snownee.lychee.util.context.LycheeContextSerializer;
+import snownee.lychee.util.context.LycheeContextSerializers;
 import snownee.lychee.util.contextual.ContextualConditionType;
 import snownee.lychee.util.particles.dripstone.DripstoneParticleService;
 import snownee.lychee.util.recipe.ILycheeRecipe;
+import snownee.lychee.util.ui.UIElementType;
 
 @Mod(Lychee.ID)
 public class CommonProxy {
@@ -168,7 +167,7 @@ public class CommonProxy {
 			return fallback;
 		}
 		if (list.size() == 1) {
-			return list.get(0);
+			return list.getFirst();
 		}
 		var index = (System.currentTimeMillis() / interval) % list.size();
 		return list.get(Math.toIntExact(index));
@@ -223,23 +222,8 @@ public class CommonProxy {
 		return v;
 	}
 
-	public static <T> List<T> tagElements(Registry<T> registry, TagKey<T> tag) {
-		return Streams.stream(registry.getTagOrEmpty(tag)).map(Holder::value).toList();
-	}
-
 	public static boolean isSimpleIngredient(Ingredient ingredient) {
 		return ingredient.isSimple();
-	}
-
-	public static void itemstackToJson(ItemStack stack, JsonObject jsonObject) {
-		jsonObject.addProperty("item", BuiltInRegistries.ITEM.getKey(stack.getItem()).toString());
-		if (!stack.getComponents().isEmpty()) {
-			// TODO
-			jsonObject.addProperty("nbt", stack.getComponents().toString());
-		}
-		if (stack.getCount() > 1) {
-			jsonObject.addProperty("count", stack.getCount());
-		}
 	}
 
 	public static JsonObject tagToJson(CompoundTag tag) {
@@ -336,7 +320,7 @@ public class CommonProxy {
 
 	private static void register(RegisterEvent event) {
 		event.register(LycheeRegistries.CONTEXT.key(), helper -> Objects.requireNonNull(LycheeContextKey.ACTION));
-		event.register(LycheeRegistries.CONTEXT_SERIALIZER.key(), helper -> Objects.requireNonNull(LycheeContextSerializer.ACTION));
+		event.register(LycheeRegistries.CONTEXT_SERIALIZER.key(), helper -> LycheeContextSerializers.init());
 		event.register(LycheeRegistries.CONTEXTUAL.key(), helper -> Objects.requireNonNull(ContextualConditionType.AND));
 		event.register(LycheeRegistries.POST_ACTION.key(), helper -> Objects.requireNonNull(PostActionTypes.DROP_ITEM));
 		event.register(BuiltInRegistries.RECIPE_SERIALIZER.key(), helper -> Objects.requireNonNull(RecipeSerializers.ITEM_BURNING));
@@ -359,6 +343,7 @@ public class CommonProxy {
 							DripstoneParticleService.DRIPSTONE_SPLASH
 					);
 				});
+		event.register(LycheeRegistries.UI_ELEMENT.key(), helper -> Objects.requireNonNull(UIElementType.BLOCK));
 	}
 
 	public interface CustomActionListener {
